--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,1 +1,51 @@
+---
+- summary: |
+    Проверка входа пользователя с существующими логином и паролем
+  requirement: |
+    При добавлении товара в корзину,товар попадает в корзину
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    - Любой товар
+  steps:
+    - Выбираем товар
+    - Жмем 'add to cart'
+    - Переходи в вкладку 'cart'
+    - Проверяем наличие товара добавленного в корзину
+  expected-result: |
+    Товар должен быть в корзине
 
+- summary: |
+    Проверка входа пользователя с помощью Github
+  requirement: |
+    При добавлении товара в корзину,товар попадает в корзину
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    - Любой товар
+  steps:
+    - Выбираем товар
+    - Жмем 'add to cart'
+    - Переходи в вкладку 'cart'
+    - Проверяем наличие товара добавленного в корзину
+  expected-result: |
+    Товар должен быть в корзине
+
+- summary: |
+    Попытка создать аккаунт на уже зарегистрированный Email
+  requirement: 
+    При добавлении товара в корзину,товар попадает в корзину
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    - Любой товар
+  steps:
+    - Выбираем товар
+    - Жмем 'add to cart'
+    - Переходи в вкладку 'cart'
+    - Проверяем наличие товара добавленного в корзину
+  expected-result: |
+    Товар должен быть в корзине
+
+
+10
