--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,6 @@
 ---
 functional:
-  - Пользователь должен иметь возможность писать личные сообщения дургим пользвотелям которые находятся как в offline так и online
+  - Пользователь должен иметь возможность писать личные сообщения другим пользователя которые находятся как в offline так и online
   - Пользователь должен иметь возможность писать в общий чат
   - Пользователь должен иметь возможность создавать игры с ботом,так и присоединятся в игру с другим пользователем
   - Пользователь должен иметь возможность отслеживать свое место в рейтинге
