--- a/testing-report.yml
+++ b/testing-report.yml
@@ -46,3 +46,19 @@
 - summary: |
     Проверка на отображения всех пользователей в списках рейтинга
   status: pass
+
+- summary: |
+    Успешное восстановление пароля
+  status: pass
+
+- summary: |
+    Успешное отправление личного сообщения пользователям в сети
+  status: pass
+
+- summary: |
+    Сайт должен отображать список всех задач
+  status: pass
+ 
+- summary: |
+    Успешный просмотр хода текущей игры
+  status: pass
