--- a/test-cases.yml
+++ b/test-cases.yml
@@ -166,3 +166,62 @@
     - В поиске по 'юзернейму' вводим ник аккаунта
   expected-result: |
     Пользователь должен увидеть себя в списке,а также Ранг/рейтинг/количество сыгранных игр/дата создания аккаунта/через какой сервис была авторизация
+
+- summary: |
+    Успешное восстановление пароля
+  requirement: |
+    Пользователь должен иметь возможность восстановить пароль
+  prerequisites:
+    окно входа на сайт 
+  test-data: |
+    - Наличие аккаунта
+  steps:
+    - Нажимаем на ссылку "Forgot your password?"
+    - В появившемся окне вводим email
+    - Нажимаем "Submit"
+  expected-result: |
+    На почту должна прийти ссылка для сброса пароля
+
+- summary: |
+    Успешное отправление личного сообщения пользователям в сети
+  requirement: |
+    Пользователь может отправлять другим пользователям личное сообщение
+  prerequisites:
+    главная страница сайта 
+  test-data: |
+    - Авторизованный аккаунт
+  steps:
+    - Находим внизу посередине сайта элемент страницы с названием "Online players"
+    - кликаем левой кнопкой мыши по пользователю, кому хотим отправить сообщение
+    - в появившемся окне выбираем "Direct message"
+    - в проявившемся окне набираем сообщение
+    - нажимаем "Send"
+  expected-result: |
+    Сообщение должно отправится в чат
+
+- summary: |
+    Сайт должен отображать список всех задач
+  requirement: |
+    Сайт должен отображать все задачи, размещенные на сайте
+  prerequisites: |
+    Открыта страница 
+  test-data: |
+    - Авторизованный аккаунт
+  steps:
+    - нажимаем на иконку пользователя
+    - в выпадающем списке выбираем "Tasks"
+  expected-result: |
+    Выводится список задач
+
+- summary: |
+    Успешный просмотр хода текущей игры
+  requirement: |
+    - Пользователь может просматривать ход текущей игры
+  prerequisites: |
+    Открыта страница 
+  test-data: |
+    - Авторизованный аккаунт
+  steps:
+    - во вкладке LOBBY выбираем игру со статусом "Show"
+  expected-result: 
+    Открывается текущая игра
