--- a/issues.yml
+++ b/issues.yml
@@ -1,4 +1,4 @@
 ---
 issues:
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1202"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1173"
+  - url: 'https://github.com/hexlet-codebattle/codebattle/issues/1391#issuecomment-1807006616'
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1611#issuecomment-1807009734"
