--- a/requirements.yml
+++ b/requirements.yml
@@ -1,40 +1,42 @@
 ---
 functional:
-  - Пользователь должен иметь возможность писать личные сообщения другим пользователя которые находятся как в offline так и online
-  - Пользователь должен иметь возможность писать в общий чат
-  - Пользователь должен иметь возможность создавать игры с ботом,так и присоединятся в игру с другим пользователем
-  - Пользователь должен иметь возможность отслеживать свое место в рейтинге
-  - При создании игры пользователь должен иметь возможность задавать уровень игры
-  - При создании игры пользователь должен иметь возможность задавать таймер игры
-  - При создании игры пользователь должен иметь возможность выбирать задачу по тегам
-  - Пользователь должен иметь возможность принять приглашение на игру 
-  - Пользователь должен иметь возможность отклонить приглашение на игру 
-  - Пользователь должен иметь возможность выбрать язык программирования для игры
-  - Пользователь должен иметь возможность писать в редакторе код задачи
-  - Пользователь должен иметь возможность сбросить написанный код
-  - Пользователь должен иметь возможность проверить решение
-  - Пользователь должен иметь возможность просматривать результат проверки решения
-  - Пользователь должен иметь возможность сдаться во время игры 
-  - Пользователь должен иметь возможность взять матч-реванш после проигрыша
-  - В случае проигрыша пользователь должен иметь возможность дорешать задачу
+  - Пользователь должен иметь возможность писать личные сообщения другим пользователя которые находятся как в offline так и online.
+  - Пользователь должен иметь возможность писать в общий чат.
+  - Пользователь должен иметь возможность создавать игры с ботом.
+  - Пользователь должен иметь возможность присоединятся в игру с другим пользователем.
+  - Пользователь должен иметь возможность отслеживать свое место в рейтинге.
+  - При создании игры пользователь должен иметь возможность задавать уровень игры.
+  - При создании игры пользователь должен иметь возможность задавать таймер игры.
+  - При создании игры пользователь должен иметь возможность выбирать задачу по тегам.
+  - Пользователь должен иметь возможность принять приглашение на игру. 
+  - Пользователь должен иметь возможность отклонить приглашение на игру.
+  - Пользователь должен иметь возможность выбрать язык программирования для игры.
+  - Пользователь должен иметь возможность писать в редакторе код задачи.
+  - Пользователь должен иметь возможность сбросить написанный код.
+  - Пользователь должен иметь возможность проверить решение.
+  - Пользователь должен иметь возможность просматривать результат проверки решения.
+  - Пользователь должен иметь возможность сдаться во время игры .
+  - Пользователь должен иметь возможность взять матч-реванш после проигрыша.
+  - В случае проигрыша пользователь должен иметь возможность дорешать задачу.
+  - Пользователь может просматривать ход текущей игры.
+  - Сайт должен отображать расписание предстоящих турниров.
+  - Пользователь должен иметь возможность просматривать свой профиль.
+  - Пользователь должен иметь возможность настраивать свой профиль.
+  - Пользователь должен иметь возможность просматривать профили других пользователей .
+  - Сайт должен отображать приглашения, отправленные другими пользователями.
+  - Сайт должен отображать инструкцию перед началом игры.
 non-functional:
   - Сайт должен быть безопасным и защищать данные пользователя.
   - Сайт должен иметь мобильную версию.
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
-  - Сайт должен быть способен обрабатывать большое количество трафика
-  - Сайт должен быть доступен на различных устройствах
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров(Safari, Firefox, Google chrome).
+  - Сайт должен быть способен обрабатывать большое количество трафика.
+  - Сайт должен быть доступен на различных устройствах.
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
-  - Сайт должен отображать задачу на 2-х языках - английский и русский
-  - Пользователь может просматривать ход текущей игры
-  - Сайт должен отображать расписание предстоящих турниров
-  - Пользователь должен иметь возможность просматривать свой профиль
-  - Пользователь должен иметь возможность настраивать свой профиль
-  - Пользователь должен иметь возможность просматривать профили других пользователей 
-  - Сайт должен отображать приглашения, отправленные другими пользователями
-  - Сайт должен отображать инструкцию перед началом игры
+  - Сайт должен отображать задачу на 2-х языках - английский и русский.
+  
 implicit:
-  - При нажатии на кнопку Codebattle происходит переход на главную страницу из любой вкладки
-  - Пользователь не может вносить изменения в условия задач, представленных на сайте
-  - Пользователь может добавлять новые задачи от своего имени
-  - Пользователь должен иметь возможность давать обратную связь
+  - При нажатии на кнопку Codebattle происходит переход на главную страницу из любой вкладки.
+  - Пользователь не может вносить изменения в условия задач, представленных на сайте.
+  - Пользователь может добавлять новые задачи от своего имени.
+  - Пользователь должен иметь возможность давать обратную связь,оставляя сообщения разработчикам.
   
