--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,15 +1,18 @@
 ---
 - summary: |
-    Проверка на регистрацию нового аккаунта
+    Успешная регистрация на сайте
   requirement: |
-    Регистрация проходит успешно
+    При вводе всех данных пользователь должен быть зарегистрирован на сайте
   prerequisites: |
-    Открыта страница сайта
+    Наличие существующего email-адреса
   test-data: |
     - Создаем аккаунт
   steps:
-    - Sign up
-    - Заполняем данные регистрации
+    - Вводим Nickname
+    - Вводим email
+    - Вводим пароль
+    - Подтверждаем пароль
+    - Нажимаем кнопку «Submit»
   expected-result: |
     Пользователь должен успешно пройти регистрацию
     
@@ -20,7 +23,7 @@
   prerequisites: |
     Открыта страница сайта
   test-data: |
-    - Созданный аккаунт 
+    - 
   steps:
     - Sign in
     - Авторизовываемся под своим логином и паролем
@@ -28,18 +31,17 @@
     Пользователь должен пройти авторизацию
 
 - summary: |
-    Проверка входа пользователя с помощью Github
+    Успешная авторизация на сайте с помощью Github
   requirement: |
-    Созданная учетная запись на GitHub
+    При наличии профиля на Github пользователь должен быть авторизован
   prerequisites: |
-    Открыта страница авторизации
+    открыта страница https://codebattle.hexlet.io/session/new?locale=en&next=%2Fremind_password и у пользователя есть профиль на Github
   test-data: |
-    - Наличие аккаунта на Github
+    -
   steps:
-    - Sign in
-    - Sign in with Github
+    - Нажимаем на кнопку "Sign in with Github"
   expected-result: |
-    Должна пройти авторизация через Github
+    Пользователь должен попасть на главную страницу
 
 - summary: |
     Проверка создания аккаунта на уже зарегистрированный Email
@@ -60,36 +62,35 @@
   requirement: 
     Сообщение отправляется в общий чат
   prerequisites: |
-    Открыта главная страница
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Набираем сообщение в общий чат
   expected-result: |
     Другие пользователи должны увидеть сообщение в общем чате
 
 - summary: |
-    Проверка входа пользователя с помощью Discord
+    Успешная авторизация на сайте с помощью Discord
   requirement: |
-    Созданная учетная запись в Discod
+    При наличии профиля на Discord пользователь должен быть авторизован
   prerequisites: |
-    Открыта страница авторизации
+    открыта страница https://codebattle.hexlet.io/session/new?locale=en&next=%2Fremind_password и у пользователя есть профиль на Discord
   test-data: |
-    - Наличие аккаунта Discord
+    -
   steps:
-    - Sign in
-    - Sign in with Discod
+    - Нажимаем на кнопку "Sign in with Discord"
   expected-result: |
-    Должна пройти авторизация через Discod
+    Пользователь должен попасть на главную страницу
 
 - summary: |
     Проверка создания игры
   requirement: 
     Игра должна быть создана 
   prerequisites: |
-    Открыта главная страница
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Create a game
     - With a bot
@@ -112,27 +113,140 @@
     Пользователь должен получить сообщение о победе или поражение 
 
 - summary: |
-    Попытка зайти в уже созданную игру другим пользователем
-  requirement: 
-    Пользователь должен присоединится к созданной игре
-  prerequisites: |
-    Главная страница
+    Успешное создание новой игры с ботом
+  requirement: |
+    Пользователь должен иметь возможность создавать новую игру с ботом
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
-    - Выбираем игру из списка 
-    - Жмем fight
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Game Type" выбираем "With a bot"
+    - кликаем по кнопке "Create battle"
   expected-result: |
-    Должна начаться игра против другого пользователя
+    Появляется страница с игрой
+
+- summary: |
+    Успешное создание новой игры с пользователями в сети
+  requirement: |
+    Пользователь должен иметь возможность создавать новую игру с пользователями в сети
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+  test-data: |
+    - 
+  steps:
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Game Type" выбираем "With others users"
+    - кликаем по кнопке "Create battle"
+  expected-result: |
+    На главной странице во вкладе "LOBBY" появляется игра со статусом "Continue"
+
+- summary: |
+    Успешная отправка пользователю приглашения к игре
+  requirement: |
+    Пользователь должен иметь возможность отправлять приглашение к игре другим пользователям
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+  test-data: |
+    - 
+  steps:
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Game Type" выбираем "With a friend"
+    - в пункте "Choose opponent" выбираем друга
+    - кликаем по кнопке "Create battle"
+  expected-result: |
+    На главной странице при нажатии на иконку мечей появится сообщение: "You invited name_friend"
+
+- summary: |
+    Успешное задание уровня игры
+  requirement: |
+    Пользователь должен иметь возможность задавать уровень игры
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+  test-data: |
+    - 
+  steps:
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Level" выбираем нужный уровень "4 звезды"
+    - кликаем по кнопке "Create battle"
+  expected-result: |
+    Запускается игра четвёртого уровня сложности
+
+- summary: |
+    Успешное задание тайминга игры
+  requirement: |
+    Пользователь должен иметь возможность задавать тайминг игры
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+  test-data: |
+    - 
+  steps:
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Time control"  устанавливаем ползунком 28 минут
+    - кликаем по кнопке "Create battle"
+  expected-result: |
+    Запускается игра с установленным ограничением в 28 минут
+
+- summary: |
+    Успешное задание игры по тегам
+  requirement: |
+    Пользователь должен иметь возможность задавать игру по тегам
+  prerequisites:
+    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+  test-data: |
+    - 
+  steps:
+    - Находим справа кнопку "CREATE A GAME"
+    - Кликаем по ней
+    - в всплывающем окне в пункте "Choose task by name or tags"  устанавливаем  тег "string"
+    - кликаем по кнопке "Create battle"
+  expected-result: |
+    Запускается игра на тему работы со строками
+
+- summary: |
+    Успешное принятие приглашения на игру
+  requirement: |
+    Пользователь должен иметь возможность принимать приглашение на игру
+  prerequisites:
+    открыта главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F и пользователю отправлено приглашение
+  test-data: |
+    - 
+  steps:
+    - Находим в правом верхнем углу иконку мечей
+    - Кликаем по ней
+    - В появившемся окне выбираем "Accept"
+  expected-result: |
+     Запускается игра
+
+- summary: |
+    Успешное отклонение приглашения на игру
+  requirement: |
+    Пользователь должен иметь возможность отклонять приглашение на игру
+  prerequisites:
+    открыта главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F и пользователю отправлено приглашение
+  test-data: |
+    - 
+  steps:
+    - Находим в правом верхнем углу иконку мечей
+    - Кликаем по ней
+    - В появившемся окне выбираем "Decline"
+  expected-result: |
+     Остается главная страница
 
 - summary: |
     Проверка на возможность просмотреть уже завершенные игры
   requirement: 
     Пользователь должен иметь возможность смотреть сыгранные игры
   prerequisites: |
-    Главная страница
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Переходим в профиль
     - Completed games
@@ -145,9 +259,9 @@
   requirement: 
     Должны отображаться игроки в рейтинге за неделю/месяц/все время
   prerequisites: |
-    Главная страница
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Жмем кнопку weak/month/all
   expected-result: |
@@ -158,9 +272,9 @@
   requirement: 
     При попытке поиска по нику пользователь должен быть найден
   prerequisites: |
-    Главная страница
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - жмем Top list
     - В поиске по 'юзернейму' вводим ник аккаунта
@@ -174,7 +288,7 @@
   prerequisites:
     окно входа на сайт 
   test-data: |
-    - Наличие аккаунта
+    - 
   steps:
     - Нажимаем на ссылку "Forgot your password?"
     - В появившемся окне вводим email
@@ -187,9 +301,9 @@
   requirement: |
     Пользователь может отправлять другим пользователям личное сообщение
   prerequisites:
-    главная страница сайта 
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Находим внизу посередине сайта элемент страницы с названием "Online players"
     - кликаем левой кнопкой мыши по пользователю, кому хотим отправить сообщение
@@ -204,9 +318,9 @@
   requirement: |
     Сайт должен отображать все задачи, размещенные на сайте
   prerequisites: |
-    Открыта страница 
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - нажимаем на иконку пользователя
     - в выпадающем списке выбираем "Tasks"
@@ -218,10 +332,61 @@
   requirement: |
     - Пользователь может просматривать ход текущей игры
   prerequisites: |
-    Открыта страница 
+    Пользователь авторизован и находится на главной странице
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - во вкладке LOBBY выбираем игру со статусом "Show"
   expected-result: 
     Открывается текущая игра
+
+- summary: |
+    Успешный просмотр расписания предстоящих турниров
+  requirement: |
+    - Сайт должен отображать расписание предстоящих турниров
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    -
+  steps:
+    - в шапке окна игр заходим во вкладку "TOURNAMENTS"
+  expected-result: 
+    На экране отображается информация о турнирах
+
+- summary: |
+    Успешный просмотр инструкции перед началом игры
+  requirement: |
+    - Сайт должен отображать инструкцию перед началом игры
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/games/ с запущенной игрой
+  test-data: |
+    -
+  steps:
+    - в шапке окна игры нажимаем на кнопку "Show guide"
+  expected-result: 
+    Выводится поэтапная инструкция к игре
+
+- summary: |
+    Успешное добавление задачи в Task packs
+  requirement: |
+    - Пользователь может добавлять новые задачи от своего имени
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    -
+  steps:
+    - Нажимаем на иконку профиля
+    - в выпавшем списке выбираем "Task"
+    - кликаем по "Create new task"
+    - в поле "Task" вводим название задачи
+    - в поле "Description" вводим условие 
+    - в поле "Input parameters types" вводим тип вводимых данных
+    - в поле "Output parameter type" вводим тип выводимых данных
+    - в поле "Example" вводим три примера
+    - кликаем по кнопке "Testing"
+    - в окне редактора вводим решение 
+    - нажимаем на кнопку "Check button"
+    - Кликаем по кнопке "Save"
+    - в всплывающем окне выбираем "Confirm"
+  expected-result: 
+    Задача появляется в списке задач
