--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка на регистрацию нового аккаунта
+    Успешная регистрация на сайте
   status: pass
     
 - summary: |
@@ -8,7 +8,7 @@
   status: pass
 
 - summary: |
-    Проверка входа пользователя с помощью Github
+    Успешная авторизация на сайте с помощью Github
   status: pass
 
 - summary: |
@@ -20,7 +20,7 @@
   status: pass
 
 - summary: |
-    Проверка входа пользователя с помощью Discord
+    Успешная авторизация на сайте с помощью Discord
   status: pass
 
 - summary: |
@@ -32,13 +32,41 @@
   status: pass
 
 - summary: |
-    Попытка зайти в уже созданную игру другим пользователем
+    Успешное создание новой игры с ботом
   status: pass
 
 - summary: |
-    Проверка на возможность просмотреть уже завершенные игры
+    Успешное создание новой игры с пользователями в сети
   status: pass
 
+- summary: |
+    Успешная отправка пользователю приглашения к игре
+  status: pass
+
+- summary: |
+    Успешное задание уровня игры
+  status: pass
+
+- summary: |
+    Успешное задание тайминга игры
+  status: pass
+
+- summary: |
+    Успешное задание игры по тегам
+  status: pass
+  
+- summary: |
+    Успешное принятие приглашения на игру
+  status: pass
+
+- summary: |
+    Успешное отклонение приглашения на игру
+  status: pass
+  
+- summary: |
+    Проверка на возможность просмотреть уже завершенные игры
+  status: pass
+  
 - summary: |
     Проверка на работоспособность списка лидеров 
   status: pass
@@ -58,7 +86,19 @@
 - summary: |
     Сайт должен отображать список всех задач
   status: pass
- 
+
 - summary: |
     Успешный просмотр хода текущей игры
+  status: pass
+
+- summary: |
+    Успешный просмотр расписания предстоящих турниров
+  status: pass
+
+- summary: |
+    Успешный просмотр инструкции перед началом игры
+  status: pass
+
+- summary: |
+    Успешное добавление задачи в Task packs
   status: pass
