--- a/test-cases.yml
+++ b/test-cases.yml
@@ -46,7 +46,7 @@
 - summary: |
     Проверка создания аккаунта на уже зарегистрированный Email
   requirement: 
-    Вводим данные уже зарегистрированной почты регистрируя новый аккаунт 
+    Вводим email зарегистрированный ранее
   prerequisites: |
     Открыта страница сайта
   test-data: |
@@ -93,7 +93,7 @@
     - 
   steps:
     - Create a game
-    - With a bot
+    - Выбираем параметр 'With a bot'
     - Create battle
   expected-result: |
     Пользователь должен перейти в игру с ботом
@@ -121,8 +121,7 @@
   test-data: |
     - 
   steps:
-    - Находим справа кнопку "CREATE A GAME"
-    - Кликаем по ней
+    - Нажимаем на кнопку "Create a game"
     - в всплывающем окне в пункте "Game Type" выбираем "With a bot"
     - кликаем по кнопке "Create battle"
   expected-result: |
@@ -137,8 +136,7 @@
   test-data: |
     - 
   steps:
-    - Находим справа кнопку "CREATE A GAME"
-    - Кликаем по ней
+    - Нажимаем на кнопку "Create a game"
     - в всплывающем окне в пункте "Game Type" выбираем "With others users"
     - кликаем по кнопке "Create battle"
   expected-result: |
@@ -293,6 +291,8 @@
     - Нажимаем на ссылку "Forgot your password?"
     - В появившемся окне вводим email
     - Нажимаем "Submit"
+    - Проверяем наличие письма на почте
+    - Восстанавливаем пароль
   expected-result: |
     На почту должна прийти ссылка для сброса пароля
 
@@ -310,11 +310,12 @@
     - в появившемся окне выбираем "Direct message"
     - в проявившемся окне набираем сообщение
     - нажимаем "Send"
+    - Проверяем наличие сообщения на втором аккаунте
   expected-result: |
     Сообщение должно отправится в чат
 
 - summary: |
-    Сайт должен отображать список всех задач
+    Сайт отображает список всех задач
   requirement: |
     Сайт должен отображать все задачи, размещенные на сайте
   prerequisites: |
